<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="person"
            type="com.mustafa.movieguideapp.models.entity.Person" />

        <variable
            name="viewmodel"
            type="com.mustafa.movieguideapp.view.ui.person.detail.PersonDetailViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <include android:id="@+id/toolbar_detail" layout="@layout/toolbar_detail" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/background800"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/person_detail_profile"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:transitionName="@string/transition_profile"
                            app:bindBackDrop="@{person}"
                            tools:src="@drawable/ic_tv_nav"
                            tools:targetApi="LOLLIPOP"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/person_detail_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="7dp"
                            android:text="@{person.name}"
                            android:textColor="@color/white"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/person_detail_biography"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:padding="10dp"
                            android:textColor="@color/white"
                            android:textSize="13sp"
                            app:biography="@{viewmodel.personLiveData}" />

                        <co.lujun.androidtagview.TagContainerLayout
                            android:id="@+id/detail_person_tags"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:padding="5dp"
                            android:visibility="gone"
                            app:container_background_color="@color/background800"
                            app:container_border_color="@color/background800"
                            app:container_border_radius="6dp"
                            app:container_enable_drag="false"
                            app:nameTags="@{viewmodel.personLiveData}"
                            app:tag_background_color="@color/colorPrimary"
                            app:tag_border_color="@color/colorPrimary"
                            app:tag_clickable="false"
                            app:tag_horizontal_padding="5dp"
                            app:tag_text_color="@color/white"
                            app:tag_theme="none"
                            app:tag_vertical_padding="6dp"
                            tools:visibility="visible" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/celebrity_movies_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/movies"
                    android:textSize="20sp"
                    android:visibility="gone"
                    app:visibilityByResource="@{viewmodel.moviesOfCelebrity}"
                    tools:text="Movies"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_celebrity_movies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    app:visibilityByResource="@{viewmodel.moviesOfCelebrity}"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_movie_for_celebrity"
                    tools:orientation="horizontal"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/celebrity_tvs_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_shows_and_series"
                    android:textSize="20sp"
                    android:visibility="gone"
                    app:visibilityByResource="@{viewmodel.tvsOfCelebrity}"
                    tools:text="Series"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_celebrity_tvs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    app:visibilityByResource="@{viewmodel.tvsOfCelebrity}"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_tv_for_celebrity"
                    tools:orientation="horizontal"
                    tools:visibility="visible" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>