...
      android:maxEms="12"
      android:singleLine="true"
      android:text="@{tv.name}"
      android:textColor="@color/white"
      android:textSize="22sp"
      android:textStyle="bold"
      tools:text="Ozark" />

    <TextView
        android:id="@+id/detail_header_celebrity_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
...
