...
        android:maxEms="12"
        android:singleLine="true"
        android:text="@{movie.title}"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Troy" />

    <TextView
        android:id="@+id/detail_header_celebrity_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
...
